tests/snapshots/transformer@unary_simple_into_complex.nolana.snap
---
source: tests/integration.rs
input_file: tests/transformer/unary_simple_into_complex.nolana
---
{
    variable.__0_result = 0;
    variable.__0_bit = 0;
    loop(24, {
        variable.__0_right_bit = math.mod(math.floor(1 / math.pow(2, variable.__0_bit)), 2);
        variable.__0_not_bit = 1 - variable.__0_right_bit;
        variable.__0_result = variable.__0_result + variable.__0_not_bit * math.pow(2, variable.__0_bit);
        variable.__0_bit = variable.__0_bit + 1;
    });
};
return variable.__0_result;
